--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -20,7 +20,7 @@ Introduction
 
    The GNU GPL gives you the right to use, modify and redistribute
    BC Subtree Remove By Range under certain conditions. The GNU GPL license
-   is distributed with the software, see the file doc/LICENCE.
+   is distributed with the software, see the file doc/LICENSE.
    It is also available at http://www.gnu.org/licenses/gpl.txt
 
    Using BC Subtree Remove By Range under the terms of the GNU GPL is free (as in freedom).
@@ -80,7 +80,7 @@ Installing BC Subtree Remove By Range extension
 Usage
 ==============================
 
-The remove subtree by range of NodeIDs command line script: ./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php
+The remove subtree by range of NodeIDs command line script: ./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php
 
 This script will remove the node subtrees within the range specified by required parameters
 '--range-start-node-id' and 'range-end-node-id' which are to be specified by script user to indicate the range of nodes to remove.
@@ -89,33 +89,33 @@ cd /path/to/ezpublish/;
 
 Use --help option to review available command line options:
 
-./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php --siteaccess ezwebin_site_user --help
+./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php --siteaccess ezwebin_site_user --help
 
 
 Primary Example Usage:
 
 In this example the parameter --ignore-trash is omitted as it is by default enabled and trash is not used all information about the node subtree will be removed from the system completely:
  
-./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000
+./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000
 
 
 Examples alternatives:
 
 In this example the parameter --ignore-trash=true is specified as an example usage when you prefer to enable it implicitly. This option is true by default:
 
-./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=true
+./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=true
 
 In this example the parameter --ignore-trash=false is specified as an example usage for when you must (no known use case for this feature) move nodes to trash and not remove all records of the nodes from the system, in effect you can restore the nodes later from the trash when you use the following option:
 
-./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=false
+./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=false
 
 In this example the parameter --remove-children=true is specified as an example usage for when you must both the nodes within the specified range of NodeIDs and any child nodes per node subtree from the system. This option is true by default:
 
-./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=true --remove-children=true
+./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=true --remove-children=true
 
 In this example the parameter --remove-children=false is specified as an example usage for when you must only remove nodes within the specified range of NodeIDs from the system:
 
-./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrangecreate.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=true --remove-children=false
+./extension/bcsubtreeremovebyrange/bin/php/bcsubtreeremovebyrange.php --siteaccess ezwebin_site_user --range-start-node-id=4000 --range-end-node-id=30000000 --ignore-trash=true --remove-children=false
 
 
 Troubleshooting
